# audio2score

./: .gitignore  Makefile  README.org  pyproject.toml
src/audio2score/: basicpitch_engine.py  cli.py  demucs_engine.py  pipeline.py  preprocess.py  score_export.py
