[project]
name = "audio2score"
version = "0.1.0"
description = "Audio → MIDI → MusicXML → PDF pipeline using Demucs ensemble + BasicPitch."
requires-python = ">=3.10"
authors = [
  { name = "YAMASHITA, Takao" }
]
license = { text = "MIT" }

# -------------------------------------------
# Runtime Dependencies (本番動作に必要)
# -------------------------------------------
dependencies = [
  "librosa>=0.10",
  "soundfile>=0.12",
  "basic-pitch>=0.3",
  "demucs>=4.0.0",
  "music21>=9.1",
  "numpy>=1.23",
  "scipy>=1.10",
  "numba>=0.57",
  "tqdm>=4.66",
  "requests>=2.31",
  "torch>=2.1",
]

# -------------------------------------------
# Optional / Dev Dependencies
# -------------------------------------------
[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "black>=24.4",
  "ruff>=0.6",
]

# -------------------------------------------
# Package Layout
# -------------------------------------------
[project.urls]
homepage = "https://example.com/audio2score"
repository = "https://github.com/example/audio2score"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

# -------------------------------------------
# Vocals: model caching & torch warnings 表示制御
# -------------------------------------------
[tool.audio2score]
default_models = ["htdemucs", "htdemucs_6s"]
default_samplerate = 44100
