[project]
name = "audio2score"
version = "0.1.0"
description = "Audio → MIDI → MusicXML → PDF pipeline using Demucs ensemble + BasicPitch."
# Python 3.11 系で固定
requires-python = ">=3.11,<3.12"
authors = [
  { name = "YAMASHITA, Takao" }
]
license = { text = "MIT" }

# -------------------------------------------
# Runtime Dependencies (本番動作に必要)
# -------------------------------------------
dependencies = [
  "librosa>=0.10",          # 音声前処理（正規化、ロード、リサンプリング）
  "soundfile>=0.12",        # WAV の読み書き
  "basic-pitch>=0.3",       # Audio → MIDI（Py3.11 対応）
  "demucs>=4.0.0",          # ステム分離
  "music21>=9.1",           # MIDI → MusicXML 等
  "numpy>=1.23",            # 数値演算
  "scipy>=1.10",            # 信号処理
  "numba>=0.57",            # librosa 用の高速化
  "tqdm>=4.66",             # プログレスバー
  "requests>=2.31",         # モデル取得など HTTP

  # TorchCodec を避ける
  "torch==2.7.*",           # PyTorch 2.7 系（torchaudio 2.7 とセット）
  "torchaudio==2.7.*",      # TorchAudio 2.7 系（この版では save/load は従来 backend）

  # pkg_resources を提供しつつ、将来削除を避ける
  "setuptools>=68,<81",     # resampy / basic-pitch 用
]

# -------------------------------------------
# Optional / Dev Dependencies
# -------------------------------------------
[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "black>=24.4",
  "ruff>=0.6",
]

[project.urls]
homepage   = "https://github.com/ac1965/audio2score"
repository = "https://github.com/ac1965/audio2score"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.audio2score]
default_models     = ["htdemucs", "htdemucs_6s"]
default_samplerate = 44100
